@@ -31,6 +31,7 @@ Version 1.7.3+svn:
      to story text instead
    * Fixed 100% CPU usage on storyscreens with no text (e.g. map screens)
    * Fix ODR issues in gui2
+   * Remove the boost 1.33 code in the unit tests
  * Animations
    * Movement have the number of steps done in value and the number of step left in value_second, this allows take-off and landing animations
 
